erDiagram

  USER ||--|| LENT                : has

  ASOCIATION ||--|{ DOCUMENT      : keeps
  ASOCIATION }|--o{ ACTIVITY      : organizes
  ASOCIATION ||--|{ MATERIAL      : owns
  ASOCIATION ||--|| MEDIA         : logo
  ASOCIATION {
    uuid    uuid                  PK
    string  short_name
    string  long_name
    string  description
    bool    is_public_joinable
    json    info
  }

  
  ACTIVITY ||--o{ MEDIA           : uses  
  ACTIVITY ||--o{ DOCUMENT        : links
  ACTIVITY {
    string  id                    PK
    string  name
    string  description
    string  room
    date    initial_date
    int     duration
    bool    is_multi_session      "Other dates in `additional_info`"
    bool    is_creditable
    bool    is_external
    bool    is_room_accepted
    bool    is_media_accepted
    bool    is_activity_accepted
    bool    is_registration_needed
    enum    access                "public | members | board"
    json    additional_info
  }
  
  DOCUMENT {
    string  id                    PK
    string  name
    string  path
    date    creation_date
    bool    is_current
    bool    is_important
    bool    is_manager_accessible
    bool    is_public_accessible
  }

  MATERIAL ||--|| LENT : is
  MATERIAL {
    string  id                    PK
    string  name
    string  desc
    int     quantity
    bool    isLendable
  }

  LENT {
    date    dueDate
    int     quantity
  }

  MEDIA {
    string  id                    PK
    string  name
    string  kind
    string  path
  }